compiler/testData/cli/jvm/jdkRelease7WithJvmTarget8Jdk11.out
compiler/testData/cli/jvm/jdkRelease.kt:5:26: error: unresolved reference 'stream'.
fun stream() = java.util.stream.Stream.of(42)
                         ^^^^^^
COMPILATION_ERROR
